--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -539,6 +539,10 @@ hr {
     display: block;
   }
 
+  .route-content > .container {
+    max-width: 100%;
+  }
+
   h1 {
     font-size: 2rem;
   }
